// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Features - Peer - Exchange Scope Selector Component should disable scope selector button when there are no scopes 1`] = `
<pf-scope-selector
  exchangeScopeItems$={[Function Observable]}
  exchangeScopeItemsLoading$={[Function Store]}
  popover={[Function NgbPopover]}
  selectedExchangeScopeItem$={[Function Store]}
  store={[Function Store]}
  systemFilterLoaded$={[Function Store]}
  systemFilterLoadedSubscription={[Function Subscriber]}
>
  <div
    class="scope-selector-container"
  >
    
    
    <button
      class="btn btn-secondary selector"
      disabled=""
      ng-reflect-ngb-popover="[object Object]"
      ng-reflect-placement="right"
      ng-reflect-popover-title="Select a Scope"
      placement="right"
      popovertitle="Select a Scope"
      type="button"
    >
      
  
      
      <span
        class="selector-caret"
      >
        
      
        <i
          class="fas fa-caret-right"
        />
        
      
      </span>
      
  
      
      <span
        class="selector-label text-muted"
      >
        Exchange Scope:
      </span>
      
  
      
      <span
        class="selection no-selection"
        title=""
      >
        
        No Selection
      
      </span>
      
  
    
    </button>
    
  
  
  </div>
  
  
  
</pf-scope-selector>
`;

exports[`Features - Peer - Exchange Scope Selector Component should display "No Selection" message when there is no exchange scope selected 1`] = `
<pf-scope-selector
  exchangeScopeItems$={[Function Observable]}
  exchangeScopeItemsLoading$={[Function Store]}
  popover={[Function NgbPopover]}
  selectedExchangeScopeItem$={[Function Store]}
  store={[Function Store]}
  systemFilterLoaded$={[Function Store]}
  systemFilterLoadedSubscription={[Function Subscriber]}
>
  <div
    class="scope-selector-container"
  >
    
    
    <button
      class="btn btn-secondary selector"
      ng-reflect-ngb-popover="[object Object]"
      ng-reflect-placement="right"
      ng-reflect-popover-title="Select a Scope"
      placement="right"
      popovertitle="Select a Scope"
      type="button"
    >
      
  
      
      <span
        class="selector-caret"
      >
        
      
        <i
          class="fas fa-caret-right"
        />
        
      
      </span>
      
  
      
      <span
        class="selector-label text-muted"
      >
        Exchange Scope:
      </span>
      
  
      
      <span
        class="selection no-selection"
        title=""
      >
        
        No Selection
      
      </span>
      
  
    
    </button>
    
  
  
  </div>
  
  
  
</pf-scope-selector>
`;

exports[`Features - Peer - Exchange Scope Selector Component should display the currently selected exchange scope 1`] = `
<pf-scope-selector
  exchangeScopeItems$={[Function Observable]}
  exchangeScopeItemsLoading$={[Function Store]}
  popover={[Function NgbPopover]}
  selectedExchangeScopeItem$={[Function Observable]}
  store={[Function Store]}
  systemFilterLoaded$={[Function Store]}
  systemFilterLoadedSubscription={[Function Subscriber]}
>
  <div
    class="scope-selector-container"
  >
    
    
    <button
      class="btn btn-secondary selector"
      ng-reflect-ngb-popover="[object Object]"
      ng-reflect-placement="right"
      ng-reflect-popover-title="Select a Scope"
      placement="right"
      popovertitle="Select a Scope"
      type="button"
    >
      
  
      
      <span
        class="selector-caret"
      >
        
      
        <i
          class="fas fa-caret-right"
        />
        
      
      </span>
      
  
      
      <span
        class="selector-label text-muted"
      >
        Exchange Scope:
      </span>
      
  
      
      <span
        class="selection"
        title="MockExchangeScopeItemName"
      >
        
        MockExchangeScopeItemName
      
      </span>
      
  
    
    </button>
    
  
  
  </div>
  
  
  
</pf-scope-selector>
`;
